refactor: refactor code to fit better the requirements

--- a/mongodb/vitest-environment-mongodb/package.json
+++ b/mongodb/vitest-environment-mongodb/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vitest-environment-prisma",
+  "name": "vitest-environment-mongodb",
   "version": "1.0.0",
   "description": "",
-  "main": "prisma-test-environment.ts",
+  "main": "mongodb-test-environment.ts",
   "keywords": [],
   "author": "",
   "license": "ISC"
