--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV=dev
-DATABASE_URL=postgres://pomerubl:DVsJCT6uxRnn_JY7gXhqP-2YclYJ2izN@batyr.db.elephantsql.com/pomerubl
-DATABASE_URL_TEST=postgresql://docker:docker@localhost:5432/clinicaleger?schema=public
+DATABASE_URL=
+DATABASE_URL_TEST=
 JWT_SECRET=oratoroeuaropadoreideroma
